saint-lascivious.github.io: minor reshuffle in faq
 - move the furniture around some
 - pretty things up a bit
 - the worlds longest html  ids

Changes to be committed:
 - modified:   frequentlyaskedquestions.html

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -102,7 +102,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a href="#thefivews">The Five Ws</a>, <a href="#cost">Who Pays For Sainternet?</a>, <a href="#funding">How Does Sainternet Make Money?</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a href="#howmuchdoessainternetcost">How Much does Sainternet Cost?</a>, <a href="#howdoessainternetgenerateincome">How does Sainternet Generate Income?</a>, <a href="#whopaysforsainternet">Who Pays for Sainternet?</a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="thefivews"><span class="embiggen">The Five Ws</span></h3>
+            <h3 id="whowhatwhenwhereandwhy"><span class="embiggen">Who, What, When, Where and Why?</span></h3>
               <p align="center">
                 <b>Who?</b>
               </p>
@@ -161,24 +161,33 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="cost"><span class="embiggen">Who Pays For Sainternet?</span></h3>
+            <h3 id="howmuchdoessainternetcost"><icon class="fa-solid fa-sack-dollar"></icon> <span class="embiggen">How Much does Sainternet Cost?</span></h3>
               <p>
-                I do.
+                Nothing.
               </p>
               <p>
-                Sainternet requires very little additional overhead outside of my own network requirements.
+                Sainternet is free to all.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="funding"><span class="embiggen">How Does Sainternet Make Money?</span></h3>
+            <h3 id="howdoessainternetgenerateincome"><icon class="fa-solid fa-money-bill-trend-up"></icon> <span class="embiggen">How does Sainternet Generate Income?</span></h3>
               <p>
                 It doesn't.
               </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="whopaysforsainternet"><icon class="fa-solid fa-file-invoice-dollar"></icon> <span class="embiggen">Who Pays for Sainternet?</span></h3>
               <p>
-                Sainternet runs at cost and I intend for this to be the case as long as I am able to provide it.
+                I do.
+              </p>
+              <p>
+                Sainternet requires very little additional overhead outside of my own network requirements and its continued development is somewhat of a hobby for me.
               </p>
            </div>
         </div>
