saint-lascivious.github.io: iconocalypse
allllllll the icons, in root, no fucking around

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - new file:   android-chrome-144x144.png
 - new file:   android-chrome-192x192.png
 - new file:   android-chrome-256x256.png
 - new file:   android-chrome-36x36.png
 - new file:   android-chrome-384x384.png
 - new file:   android-chrome-48x48.png
 - new file:   android-chrome-512x512.png
 - new file:   android-chrome-72x72.png
 - new file:   android-chrome-96x96.png
 - new file:   apple-touch-icon-114x114-precomposed.png
 - new file:   apple-touch-icon-114x114.png
 - new file:   apple-touch-icon-120x120-precomposed.png
 - new file:   apple-touch-icon-120x120.png
 - new file:   apple-touch-icon-144x144-precomposed.png
 - new file:   apple-touch-icon-144x144.png
 - new file:   apple-touch-icon-152x152-precomposed.png
 - new file:   apple-touch-icon-152x152.png
 - new file:   apple-touch-icon-180x180-precomposed.png
 - new file:   apple-touch-icon-180x180.png
 - new file:   apple-touch-icon-57x57-precomposed.png
 - new file:   apple-touch-icon-57x57.png
 - new file:   apple-touch-icon-60x60-precomposed.png
 - new file:   apple-touch-icon-60x60.png
 - new file:   apple-touch-icon-72x72-precomposed.png
 - new file:   apple-touch-icon-72x72.png
 - new file:   apple-touch-icon-76x76-precomposed.png
 - new file:   apple-touch-icon-76x76.png
 - new file:   apple-touch-icon-precomposed.png
 - new file:   apple-touch-icon.png
 - new file:   browserconfig.xml
 - modified:   connecttosainternet.html
 - new file:   favicon-16x16.png
 - new file:   favicon-32x32.png
 - modified:   favicon.ico
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - new file:   mstile-144x144.png
 - new file:   mstile-150x150.png
 - new file:   mstile-310x150.png
 - new file:   mstile-310x310.png
 - new file:   mstile-70x70.png
 - modified:   newsandupda

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -22,29 +22,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz FAQs</title>
+    <title>sainternet.xyz</title>
 
     <!-- Manifest -->
-    <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
+    <link rel="manifest" href="/sainternet.webmanifest">
 
     <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="resources/icons/icon-192.png">
-    <link rel="icon" sizes="512x512" href="resources/icons/icon-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
 
     <!-- Safari iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
 
     <!-- Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="resources/icons/ms-touch-icon.png">
-    <meta name="msapplication-TileColor" content="#3372DF">
+    <meta name="msapplication-TileColor" content="#f44336">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#f44336">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/frequentlyaskedquestions.html">
