--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
               </p>
           </div>
         </div>
+        <div class="mdl-layout-spacer"></div>
         <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
