--- a/testsainternet.html
+++ b/testsainternet.html
@@ -195,6 +195,7 @@ nslookup -type=txt test.sainternet.xyz
               </pre>
            </div>
         </div>
+        <div class="mdl-layout-spacer"></div>
         <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
