--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -134,6 +134,7 @@ nslookup -type=txt 265.pokedex dns.sainternet.xyz
               </p>
           </div>
         </div>
+        <div class="mdl-layout-spacer"></div>
         <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
