--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -154,6 +154,7 @@
               </table>
            </div>
         </div>
+        <div class="mdl-layout-spacer"></div>
         <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
