--- a/404.html
+++ b/404.html
@@ -35,10 +35,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
 
     <!-- Win8 (144x144 + tile color) -->
+    <meta name="application-name" content="sainternet.xyz">
     <meta name="msapplication-TileColor" content="#f44336">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#f44336">
@@ -59,11 +68,11 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_blue-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/button_home.css">
-    <link rel="stylesheet" href="resources/stylesheets/img.css">
-    <link rel="stylesheet" href="resources/stylesheets/pre.css">
-    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
-    <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.css">
+    <link rel="stylesheet" href="/resources/stylesheets/pre.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -72,20 +81,20 @@
           <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="index.html">Home</a>
-            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/index.html">Home</a>
+            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="index.html">Home</a>
-          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="mdl-navigation__link" href="/index.html">Home</a>
+          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">???</span>
           <a class="mdl-navigation__link" href="#pokemon404"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>???</b></a>
@@ -104,7 +113,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
+              <a href="/index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
             </div>
           </div>
         </div>
@@ -155,7 +164,7 @@ nslookup -type=txt 404.pokedex dns.sainternet.xyz
         </footer>
       </main>
     </div>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="/index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
