--- a/filtereddns.html
+++ b/filtereddns.html
@@ -35,10 +35,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
 
     <!-- Win8 (144x144 + tile color) -->
+    <meta name="application-name" content="sainternet.xyz">
     <meta name="msapplication-TileColor" content="#f44336">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#f44336">
@@ -59,24 +68,24 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/button_home.css">
-    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
-    <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
 
     <!-- Prefetch / Prerender-->
     <link rel="dns-prefetch" href="wikipedia.org">
     <link rel="dns-prefetch" href="support.mozilla.org">
     <link rel="dns-prefetch" href="developer.apple.com">
-    <link rel="prefetch" href="aboutsainternet.html" as="document">
-    <link rel="prerender" href="aboutsainternet.html">
-    <link rel="prefetch" href="frequentlyaskedquestions.html" as="document">
-    <link rel="prerender" href="frequentlyaskedquestions.html">
-    <link rel="prefetch" href="connecttosainternet.html" as="document">
-    <link rel="prerender" href="connecttosainternet.html">
-    <link rel="prefetch" href="portsandprotocols.html" as="document">
-    <link rel="prerender" href="portsandprotocols.html">
-    <link rel="prefetch" href="testsainternet.html" as="document">
-    <link rel="prerender" href="testsainternet.html">
+    <link rel="prefetch" href="/aboutsainternet.html" as="document">
+    <link rel="prerender" href="/aboutsainternet.html">
+    <link rel="prefetch" href="/frequentlyaskedquestions.html" as="document">
+    <link rel="prerender" href="/frequentlyaskedquestions.html">
+    <link rel="prefetch" href="/connecttosainternet.html" as="document">
+    <link rel="prerender" href="/connecttosainternet.html">
+    <link rel="prefetch" href="/portsandprotocols.html" as="document">
+    <link rel="prerender" href="/portsandprotocols.html">
+    <link rel="prefetch" href="/testsainternet.html" as="document">
+    <link rel="prerender" href="/testsainternet.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -85,25 +94,25 @@
           <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="index.html">Home</a>
-            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+            <a class="mdl-navigation__link" href="/index.html">Home</a>
+            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-            <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="index.html">Home</a>
-          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
+          <a class="mdl-navigation__link" href="/index.html">Home</a>
+          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
-          <a class="mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQs</a>
-          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
-          <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="mdl-navigation__link" href="/aboutsainternet.html"> - About Filtered DNS</a>
+          <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
+          <a class="mdl-navigation__link" href="/connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
+          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
         <nav class="mdl-navigation">
@@ -118,7 +127,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a>
+              <a href="/index.html">Home</a> &gt; <a href="#filtereddns"><b>Filtered DNS</b></a>
             </div>
           </div>
         </div>
@@ -127,7 +136,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="filtereddns"><span class="embiggen">Filtered DNS</span></h3>
               <p>
-                Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
+                Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="/portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
               </p>
               <p>
                 Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
@@ -139,7 +148,7 @@
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
               <p>
-                You can find information about the technologies powering Sainternet Filtered DNS <a href="aboutsainternet.html">here</a>.
+                You can find information about the technologies powering Sainternet Filtered DNS <a href="/aboutsainternet.html">here</a>.
               </p>
           </div>
         </div>
@@ -156,7 +165,7 @@
         </footer>
       </main>
     </div>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="/index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
