--- a/index.html
+++ b/index.html
@@ -35,10 +35,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
 
     <!-- Win8 (144x144 + tile color) -->
+    <meta name="application-name" content="sainternet.xyz">
     <meta name="msapplication-TileColor" content="#f44336">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#f44336">
@@ -59,20 +68,22 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/img.css">
-    <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
-    <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
+    <link rel="stylesheet" href="/resources/stylesheets/img.css">
+    <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
+    <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
 
     <!-- Prefetch / Prerender-->
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
     <link rel="dns-prefetch" href="www.reddit.com">
-    <link rel="prefetch" href="newsandupdates.html" as="document">
-    <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
-    <link rel="prefetch" href="pokedexoverdns.html" as="document">
-    <link rel="prerender" href="pokedexoverdns.html">
+    <link rel="prefetch" href="/resources/images/wurmple-shiny.png" as="image">
+    <link rel="prefetch" href="/newsandupdates.html" as="document">
+    <link rel="prerender" href="/newsandupdates.html">
+    <link rel="prefetch" href="/filtereddns.html" as="document">
+    <link rel="prerender" href="/filtereddns.html">
+    <link rel="prefetch" href="/resources/images/terminal.png" as="image">
+    <link rel="prefetch" href="/pokedexoverdns.html" as="document">
+    <link rel="prerender" href="/pokedexoverdns.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -82,9 +93,9 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
-            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
         </div>
       </header>
@@ -92,9 +103,9 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
-          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
         <nav class="mdl-navigation">
