saint-lascivious.github.io: better dns profile list, yeet icons
 - use mdl list style for dns profile downloads
 - extreme back-to-basics for icons and pwa voodoo
   yeet

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - deleted:    android-chrome-144x144.png
 - deleted:    android-chrome-192x192.png
 - deleted:    android-chrome-256x256.png
 - deleted:    android-chrome-36x36.png
 - deleted:    android-chrome-384x384.png
 - deleted:    android-chrome-48x48.png
 - deleted:    android-chrome-512x512.png
 - deleted:    android-chrome-72x72.png
 - deleted:    android-chrome-96x96.png
 - deleted:    apple-touch-icon-114x114-precomposed.png
 - deleted:    apple-touch-icon-114x114.png
 - deleted:    apple-touch-icon-120x120-precomposed.png
 - deleted:    apple-touch-icon-120x120.png
 - deleted:    apple-touch-icon-144x144-precomposed.png
 - deleted:    apple-touch-icon-144x144.png
 - deleted:    apple-touch-icon-152x152-precomposed.png
 - deleted:    apple-touch-icon-152x152.png
 - deleted:    apple-touch-icon-180x180-precomposed.png
 - deleted:    apple-touch-icon-180x180.png
 - deleted:    apple-touch-icon-57x57-precomposed.png
 - deleted:    apple-touch-icon-57x57.png
 - deleted:    apple-touch-icon-60x60-precomposed.png
 - deleted:    apple-touch-icon-60x60.png
 - deleted:    apple-touch-icon-72x72-precomposed.png
 - deleted:    apple-touch-icon-72x72.png
 - deleted:    apple-touch-icon-76x76-precomposed.png
 - deleted:    apple-touch-icon-76x76.png
 - deleted:    apple-touch-icon-precomposed.png
 - deleted:    apple-touch-icon.png
 - deleted:    browserconfig.xml
 - modified:   connecttosainternet.html
 - deleted:    favicon-16x16.png
 - deleted:    favicon-32x32.png
 - modified:   favicon.ico
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - deleted:    mstile-144x144.png
 - deleted:    mstile-150x150.png
 - deleted:    mstile-310x150.png
 - deleted

--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -24,37 +24,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <!-- Manifest -->
-    <link rel="manifest" href="/sainternet.webmanifest">
-
-    <!-- Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-
-    <!-- Safari iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
-
-    <!-- Win8 (144x144 + tile color) -->
-    <meta name="application-name" content="sainternet.xyz">
-    <meta name="msapplication-TileColor" content="#f44336">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#f44336">
-
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/newsandupdates.html">
