--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -24,37 +24,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <!-- Manifest -->
-    <link rel="manifest" href="/sainternet.webmanifest">
-
-    <!-- Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-
-    <!-- Safari iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f44336">
-
-    <!-- Win8 (144x144 + tile color) -->
-    <meta name="application-name" content="sainternet.xyz">
-    <meta name="msapplication-TileColor" content="#f44336">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#f44336">
-
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/connecttosainternet.html">
@@ -151,37 +123,40 @@
                 Apple iOS 14/macOS Big Sur or higher required.
               </p>
               <ol>
-                <li>Select a DNS Profile from above</li>
-                <li>Download the selected DNS Profile</li>
+                <li>Select a DNS Profile from below</li>
+                <li>Download the selected DNS Profile (click the icon to download)</li>
                 <li>Navigate to the downloaded DNS Profile</li>
                 <li>Open the DNS Profile</li>
                 <li>Agree to any/all prompts</li>
                 <li>Done</li>
               </ol>
+              <div class="sainternet-list-action mdl-list">
+                <div class="mdl-list__item">
+                  <span class="mdl-list__item-primary-content">
+                    <span>sainternet-https-only.mobileconfig</span>
+                  </span>
+                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="fa-solid fa-download"></icon></a>
+                </div>
+                <div class="mdl-list__item">
+                  <span class="mdl-list__item-primary-content">
+                    <span>sainternet-tls-only.mobileconfig</span>
+                  </span>
+                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="fa-solid fa-download"></icon></a>
+                </div>
+                <div class="mdl-list__item">
+                  <span class="mdl-list__item-primary-content">
+                    <span>sainternet-https-and-tls.mobileconfig</span>
+                  </span>
+                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="fa-solid fa-download"></icon></a>
+                </div>
+              </div>
               <p>
-                DNS over HTTPS (DoHTTPS):
-                <ul>
-                  <li><a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig <icon class="fa-solid fa-download"></icon></a></li>
-                </ul>
+                Notes:
               </p>
-              <p>
-                DNS over TLS (DoTLS):
-                <ul>
-                  <li><a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig <icon class="fa-solid fa-download"></icon></a>
-                </ul>
-              </p>
-              <p>
-                DoHTTPS and DoTLS:
-                <ul>
-                  <li><a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig <icon class="fa-solid fa-download"></icon></a>
-                </ul>
-              </p>
-              <p>
-                These profiles are not digitally signed and that is expected/normal.
-              </p>
-              <p>
-                Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.
-              </p>
+              <ol>
+                <li>These profiles are not digitally signed and that is expected/normal.</li>
+                <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
+              </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
@@ -217,8 +192,11 @@
                 <li>Done</li>
               </ol>
               <p>
-                Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).
+                Notes:
               </p>
+              <ol>
+                <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
+              </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
