--- a/404.html
+++ b/404.html
@@ -24,6 +24,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Pokémon #404</title>
 
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
