saint-lascivious.github.io: update favicon
 - remake all icons from scratch
   (slight changes background text colour and position)
   (larger font)
 - add larger android chrome icon source option
   (256x256)
 - rebuild favicon .ico
 - declare favicon.ico explicitly

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   favicon.ico
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   resources/icons/android-chrome-192x192.png
 - new file:   resources/icons/android-chrome-256x256.png
 - modified:   resources/icons/favicon-16x16.png
 - modified:   resources/icons/favicon-32x32.png
 - modified:   testsainternet.html

--- a/265.html
+++ b/265.html
@@ -26,11 +26,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/png" sizes="256x256" href="/resources/icons/android-chrome-256x256.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/resources/icons/android-chrome-192x192.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="/favicon.ico">
 
     <!-- SEO -->
     <link rel="canonical" href="https://sainternet.xyz/265.html">
