saint-lascivious.github.io: dedicated github projects page
 - as opposed to the current style of ugly external likk from menu

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - new file:   projects.html
   just a basic shell at this point
   better project descriptions/previews Coming Soon(TM)
 - modified:   testsainternet.html

--- a/265.html
+++ b/265.html
@@ -64,6 +64,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
           </nav>
         </div>
       </header>
@@ -74,12 +75,11 @@
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
-        <span class="mdl-layout-title">GitHub</span>
+        <span class="mdl-layout-title">???</span>
+          <a class="mdl-navigation__link" href="#pokemon265"><b> - ???</b></a>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
       <div class="pink-ribbon"></div>
