--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -62,6 +62,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
           </nav>
         </div>
       </header>
@@ -77,12 +78,7 @@
           <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
           <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-        </nav>
-        <span class="mdl-layout-title">GitHub</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
+          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
       </div>
       <div class="yellow-ribbon"></div>
