--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <link rel="prefetch" href="/resources/images/terminal.png" as="image">
     <link rel="prefetch" href="/pokedexoverdns.html" as="document">
     <link rel="prerender" href="/pokedexoverdns.html">
+    <link rel="prefetch" href="/projects.html" as="document">
+    <link rel="prerender" href="/projects.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -75,6 +77,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
           </nav>
         </div>
       </header>
@@ -85,12 +88,7 @@
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-        </nav>
-        <span class="mdl-layout-title">GitHub</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
-          <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
+          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
       </div>
       <div class="red-ribbon"></div>
