--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - 404.html
+  sainternet.xyz - projects.html
   Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #404</title>
+    <title>sainternet.xyz</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -35,7 +35,7 @@
     <link rel="icon" sizes="any" href="/favicon.ico">
 
     <!-- SEO -->
-    <link rel="canonical" href="https://sainternet.xyz/404.html">
+    <link rel="canonical" href="https://sainternet.xyz/projects.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
     <!-- Styles -->
@@ -44,12 +44,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://code.getmdl.io">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_blue-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="/resources/stylesheets/button_home.css">
-    <link rel="stylesheet" href="/resources/stylesheets/img.css">
-    <link rel="stylesheet" href="/resources/stylesheets/pre.css">
     <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
   </head>
@@ -64,7 +62,7 @@
             <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="mdl-navigation__link" href="#projects"><b>Projects</b></a>
           </nav>
         </div>
       </header>
@@ -75,56 +73,63 @@
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
-        </nav>
-        <span class="mdl-layout-title">???</span>
-          <a class="mdl-navigation__link" href="#pokemon404"><b> - ???</b></a>
-        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="#projects"><b>Projects</b></a>
         </nav>
       </div>
-      <div class="light_blue-ribbon"></div>
+      <div class="indigo-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="/index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
+              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#unbound-config">unbound-config</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="pokemon404"><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-              <picture>
-                <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
-                <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-              </picture>
-              <p align="center">
-                A wild <b>Luxio</b> appeared!
-              </p>
+            <h3 id="projects"><span class="embiggen">Projects</span></h3>
               <p>
-                Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+                Some text about these projects.
               </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="example"><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
+            <h3 id="haha_cache_go_brrr"><span class="embiggen">haha_cache_go_brrr</span></h3>
               <p>
-                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/dig">dig</a>:
+                <a href="https://github.com/saint-lascivious/haha_cache_go_brrr"">haha_cache_go_brrr</a>
               </p>
-              <pre>
-dig +short txt luxio.pokedex @dns.sainternet.xyz
-              </pre>
               <p>
-                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
+                Some text about this project.
               </p>
-              <pre>
-nslookup -type=txt 404.pokedex dns.sainternet.xyz
-              </pre>
-          </div>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="munin-pihole-plugins"><span class="embiggen">munin-pihole-plugins</span></h3>
+              <p>
+                <a href="https://github.com/saint-lascivious/munin-pihole-plugins"">munin-pihole-plugins</a>
+              </p>
+              <p>
+                Some text about this project.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="unbound-config"><span class="embiggen">unbound-config</span></h3>
+              <p>
+                <a href="https://github.com/pi-hole/FTL">unbound-config</a>
+              </p>
+              <p>
+                Some text about this project.
+              </p>
+           </div>
         </div>
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
