saint-lascivious.github.io: expand on projects.html
 - various associated fixes
 - add line breaks in long headings
   (to better control where it would break in small screens)

 Changes to be committed:
 - modified:   connecttosainternet.html
 - modified:   frequentlyaskedquestions.html
 - modified:   pokedexoverdns.html
 - modified:   projects.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -87,7 +87,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#androidprivatedns">Android Private DNS</a>, <a href="#appleiosmacos">Apple iOS/MacOS</a>, <a href="#googlechromechromium">Google Chrome/Chromium</a>, <a href="#mozillafirefox">Mozilla Firefox</a>, <a href="#samsunginternet">Samsung Internet</a>
+              <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#appleiosmacos">Apple iOS/MacOS</a>, <a href="#googleandroidprivatedns">Google Android Private DNS</a>, <a href="#googlechromechromium">Google Chrome/Chromium</a>, <a href="#mozillafirefox">Mozilla Firefox</a>, <a href="#samsunginternet">Samsung Internet</a>
             </div>
           </div>
         </div>
@@ -103,25 +103,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android Private DNS</span></h3>
-              <p align="center">
-                Android 9 (Pie) or higher required.
-              </p>
-              <ol>
-                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
-                <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
-                <li>Search for "Private DNS"</li>
-                <li>Select "Private DNS"</li>
-                <li>Select "Designated Private DNS"</li>
-                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
-                <li>Done</li>
-              </ol>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple iOS/macOS</span></h3>
+            <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
               <p align="center">
                 Apple iOS 14/macOS Big Sur or higher required.
               </p>
@@ -165,7 +147,25 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google Chrome/Chromium</span></h3>
+            <h3 id="googleandroidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Google Android<br>Private DNS</span></h3>
+              <p align="center">
+                Android 9 (Pie) or higher required.
+              </p>
+              <ol>
+                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+                <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
+                <li>Search for "Private DNS"</li>
+                <li>Select "Private DNS"</li>
+                <li>Select "Designated Private DNS"</li>
+                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+                <li>Done</li>
+              </ol>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
               <ol>
                 <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
                 <li>Settings <icon class="fa-solid fa-cog"></icon></li>
@@ -180,7 +180,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla Firefox</span></h3>
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla<br>Firefox</span></h3>
               <ol>
                 <li>Menu <icon class="fa-solid fa-bars"></icon></li>
                 <li>Settings <icon class="fa-solid fa-cog"></icon></li>
@@ -205,7 +205,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="samsunginternet"><span class="embiggen">Samsung Internet</span></h3>
+            <h3 id="samsunginternet"><span class="embiggen">Samsung<br>Samsung Internet</span></h3>
               <p>
                 Use the instructions for <a href="#googlechromechromium">Google Chrome/Chromium</a>.
               </p>
