--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -103,7 +103,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="whowhatwhenwhereandwhy"><span class="embiggen">Who, What, When, Where and Why?</span></h3>
+            <h3 id="whowhatwhenwhereandwhy"><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
               <p align="center">
                 <b>Who?</b>
               </p>
@@ -146,7 +146,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="howmuchdoessainternetcost"><icon class="fa-solid fa-sack-dollar"></icon> <span class="embiggen">How Much does Sainternet Cost?</span></h3>
+            <h3 id="howmuchdoessainternetcost"><icon class="fa-solid fa-sack-dollar"></icon> <span class="embiggen">How Much does<br>Sainternet Cost?</span></h3>
               <p>
                 Nothing.
               </p>
@@ -158,7 +158,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="howdoessainternetgenerateincome"><icon class="fa-solid fa-money-bill-trend-up"></icon> <span class="embiggen">How does Sainternet Generate Income?</span></h3>
+            <h3 id="howdoessainternetgenerateincome"><icon class="fa-solid fa-money-bill-trend-up"></icon> <span class="embiggen">How does Sainternet<br>Generate Income?</span></h3>
               <p>
                 It doesn't.
               </p>
@@ -167,7 +167,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="whopaysforsainternet"><icon class="fa-solid fa-file-invoice-dollar"></icon> <span class="embiggen">Who Pays for Sainternet?</span></h3>
+            <h3 id="whopaysforsainternet"><icon class="fa-solid fa-file-invoice-dollar"></icon> <span class="embiggen">Who Pays for<br>Sainternet?</span></h3>
               <p>
                 I do.
               </p>
