--- a/projects.html
+++ b/projects.html
@@ -82,16 +82,31 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#unbound-config">unbound-config</a>
+              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#dnsproxy-config">dnsproxy-config</a>, <a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#sainternet_xyz">sainternet.xyz</a>, <a href="#unbound-config">unbound-config</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="projects"><span class="embiggen">Projects</span></h3>
+            <h3 id="projects"><icon class="fa-brands fa-github"></icon> <span class="embiggen">Popular GitHub Projects</span></h3>
               <p>
-                Some text about these projects.
+                This page lists some of my more popular GitHub repositories.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="dnsproxy-config"><span class="embiggen">dnsproxy-config</span></h3>
+              <p>
+                <a href="https://github.com/saint-lascivious/dnsproxy-config">dnsproxy-config</a>
+              </p>
+              <p>
+                dnsproxy as a simple service
+              </p>
+              <p>
+                Example service using AdGuard Team's dnsproxy to provide encrypted transports to existing local and remote nameservers, can be easily modified to purpose.
               </p>
            </div>
         </div>
@@ -100,10 +115,10 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="haha_cache_go_brrr"><span class="embiggen">haha_cache_go_brrr</span></h3>
               <p>
-                <a href="https://github.com/saint-lascivious/haha_cache_go_brrr"">haha_cache_go_brrr</a>
+                <a href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
               </p>
               <p>
-                Some text about this project.
+                A very silly, very shitty little DNS cache warmup tool born of sleep deprivation, far too much coffee, and a poor moral compass.
               </p>
            </div>
         </div>
@@ -112,10 +127,25 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="munin-pihole-plugins"><span class="embiggen">munin-pihole-plugins</span></h3>
               <p>
-                <a href="https://github.com/saint-lascivious/munin-pihole-plugins"">munin-pihole-plugins</a>
+                <a href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
               </p>
               <p>
-                Some text about this project.
+                A set of Munin plugins for monitoring various Pi-hole® stats.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="sainternet_xyz"><span class="embiggen">sainternet.xyz</span></h3>
+              <p>
+                <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">sainternet.xyz</a>
+              </p>
+              <p>
+                sainternet.xyz
+              </p>
+              <p>
+                The GitHub Pages repository currently hosting this site.
               </p>
            </div>
         </div>
@@ -127,7 +157,10 @@
                 <a href="https://github.com/pi-hole/FTL">unbound-config</a>
               </p>
               <p>
-                Some text about this project.
+                Fragmented configuration files for Unbound recursive DNS resolver.
+              </p>
+              <p>
+                Originally designed purely for personal use, unbound-config is a project that has evolved around the configuration and management of NLnet Labs' Unbound recursive nameserver.
               </p>
            </div>
         </div>
