saint-lascivious.github.io: projects.html - 'you are here'
 - link to exact source line linking to exact source line
   ...linkception!
 - add an id just to reference in source comment

Changes to be committed:
 - modified:   projects.html

--- a/projects.html
+++ b/projects.html
@@ -147,6 +147,10 @@
               <p>
                 The GitHub Pages repository currently hosting this site.
               </p>
+              <p id="you_are_here">
+                <!-- https://sainternet.xyz/projects#you_are_here -->
+                You are <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/blob/master/projects.html#L151">here</a>.
+              </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
